ecmascript/parser/tests/test262-error-references/fail/6069bca758f9503d.js.stderr
error: TS1014
 --> $DIR/tests/test262-parser/fail/6069bca758f9503d.js:1:15
  |
1 | function f(a, ...b, c){}
  |               ^^^

